--- a/style.css
+++ b/style.css
@@ -36,12 +36,12 @@ body{
     box-shadow: 0px 0px 5px 5px grey;
     
 }
-.main_img{
+#main_img{
     height: 400px;
     width: 400px;
     object-fit: cover;
 }
-.product_title{
+#product_title{
     text-align: center;
     font-family: cursive;
 }
@@ -55,6 +55,10 @@ body{
     width: 35px;
     margin: 15px;
 }
+.symbol:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
 .button_section{
     display: flex;
     justify-content: center;  
@@ -62,7 +66,7 @@ body{
 .button{
     height: 40px;
     width: auto;
-    background-color: #00ff00;
+    background-color: #00b300;
     color: white;
     border: 0;
     border-radius: 15px;
